--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -51,11 +51,8 @@
 
         <activity
             android:name=".doze.DozeSettingsActivity"
-            android:label="@string/ambient_display_title">
-            <intent-filter>
-                <action android:name="org.lineageos.settings.device.DOZE_SETTINGS" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
+            android:label="@string/ambient_display_title"
+            android:theme="@style/Theme.SubSettingsBase">
         </activity>
 
         <activity
