--- a/rootdir/etc/init.nabu.perf.rc
+++ b/rootdir/etc/init.nabu.perf.rc
@@ -51,6 +51,10 @@ on property:vendor.post_boot.parsed=1
     write /dev/cpuset/system-background/cpus 0-3
     write /dev/cpuset/restricted/cpus 0-3
 
+    # Configure CPU input boost
+    write /sys/devices/system/cpu/cpu_boost/input_boost_freq "0:1324800"
+    write /sys/devices/system/cpu/cpu_boost/input_boost_ms 150
+
     # Setup runtime blkio
     # value for group_idle is us
     write /dev/blkio/blkio.weight 1000
